# pywright

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: playwright.yml
pywright/pages/: base_page.py  listing_page.py
tests/: test_example.py
tests/listing/: test_filters.py  test_pagination.py  test_price_range.py  test_search.py  test_sort.py
