[tool.poetry]
name = "pywright"
version = "0.1.0"
description = ""
authors = ["pjfig <pjsfigueira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest-playwright = "^0.4.4"
pre-commit = "^3.6.2"
pytest-xdist = "^3.5.0"
playwright = "^1.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
